# knowledge_manageme

./: .gitignore  README.md  前端模块重构.md  数据库表结构分析.md
backend/: .gitignore  README.md  check_table_structure.py  pyproject.toml  test_db_connection.py
backend/app/: main.py
backend/app/core/: config.py  database.py  local_users.py  simple_auth.py
backend/app/models/: __init__.py  chengyu.py  ciyu.py  hanzi.py  relation.py  user.py
backend/app/schemas/: __init__.py  chengyu.py  ciyu.py  common.py  user.py
backend/app/utils/: auth.py
backend/tests/: README.md  check_table_structure.py  test_db_connection.py  test_fastapi_endpoints.py  test_models.py  test_schemas.py  test_simple_api.py
frontend/: index.html  package.json
frontend/src/: style.css
frontend/src/components/: Header.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: request.js
frontend/src/views/: ChengyuList.vue  CiyuList.vue  Home.vue  Login.vue  Main.vue
frontend/src/views/exam/: ExamTemplate.vue  HSKEssay.vue  HSKListening.vue  HSKReading.vue  HSKWriting.vue  YCTEssay.vue  YCTListening.vue  YCTReading.vue  YCTWriting.vue
frontend/src/views/hanzi/: HanziList.vue
frontend/src/views/media/: AudioList.vue  VideoList.vue
